@@ -1,8 +1,6 @@
 package com.example.apartmentmanagement.service;
 
-import com.example.apartmentmanagement.dto.RoomDashboardDto;
-import com.example.apartmentmanagement.dto.RoomOutstandingDto;
-import com.example.apartmentmanagement.dto.TenantsManagement;
+import com.example.apartmentmanagement.dto.*;
 import com.example.apartmentmanagement.exception.ResourceNotFoundException;
 import com.example.apartmentmanagement.model.*;
 import com.example.apartmentmanagement.repository.*;
@@ -41,112 +39,254 @@ class DashboardServiceTest {
     }
 
     @Test
-    void getRoomDashboard_success() {
+    void getRoomDashboard_success_withMixedItems() {
         String roomNum = "101";
         Room room = new Room();
         room.setRoomNum(roomNum);
         room.setStatus("available");
 
-        User user = new User();
-        user.setFullName("John Doe");
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-001");
+
+        Contract contract = new Contract();
+        contract.setTenant(tenant);
+        contract.setStatus("active");
+        contract.setStartDate(LocalDate.now().minusDays(5));
+
+        InvoiceItem item1 = new InvoiceItem();
+        item1.setDescription("Water Fee");
+        item1.setAmount(BigDecimal.valueOf(100));
+
+        InvoiceItem item2 = new InvoiceItem();
+        item2.setDescription("Electricity Charge");
+        item2.setAmount(BigDecimal.valueOf(200));
+
+        InvoiceItem item3 = new InvoiceItem();
+        item3.setDescription("อื่นๆ");
+        item3.setAmount(BigDecimal.valueOf(50));
+
+        Invoice invoice = new Invoice();
+        invoice.setIssueDate(LocalDate.now());
+        invoice.setItems(Arrays.asList(item1, item2, item3));
+
+        when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
+        when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-001")).thenReturn(null); // test null unpaid
+        when(invoiceRepo.findTotalExpensesByTenant("USR-001")).thenReturn(null); // test null expenses
+        when(maintenanceRepo.countByRoomRoomNumAndStatus(roomNum, "pending")).thenReturn(0L);
+        when(invoiceRepo.findRecentInvoicesByTenant(eq("USR-001"), any(LocalDate.class))).thenReturn(List.of(invoice));
+
+        RoomDashboardDto result = dashboardService.getRoomDashboard(roomNum);
+
+        assertEquals("available", result.getStatus());
+        assertEquals("USR-001", result.getTenantID());
+        assertEquals(BigDecimal.ZERO, result.getTotalUnpaid());
+        assertEquals(BigDecimal.ZERO, result.getTotalExpenses());
+        assertEquals(1, result.getLast6Months().size());
+        assertEquals(BigDecimal.valueOf(100), result.getLast6Months().get(0).getWater());
+        assertEquals(BigDecimal.valueOf(200), result.getLast6Months().get(0).getElectric());
+        assertEquals(BigDecimal.valueOf(350), result.getLast6Months().get(0).getTotal());
+    }
+
+    @Test
+    void getRoomDashboard_withNonNullTotals_success() {
+        String roomNum = "101";
+        Room room = new Room();
+        room.setRoomNum(roomNum);
+        room.setStatus("occupied");
 
         Tenant tenant = new Tenant();
         tenant.setTenantId("USR-001");
-        tenant.setUser(user);
 
         Contract contract = new Contract();
-        contract.setContractNum("CTR-2025-001");
-        contract.setRoom(room);
         contract.setTenant(tenant);
         contract.setStatus("active");
         contract.setStartDate(LocalDate.now().minusDays(10));
 
-        InvoiceItem waterItem = new InvoiceItem();
-        waterItem.setDescription("Water");
-        waterItem.setAmount(BigDecimal.valueOf(100));
-
-        InvoiceItem electricItem = new InvoiceItem();
-        electricItem.setDescription("Electricity");
-        electricItem.setAmount(BigDecimal.valueOf(200));
-
         Invoice invoice = new Invoice();
-        invoice.setInvoiceId("INV-2025-10-001");
         invoice.setIssueDate(LocalDate.now());
-        invoice.setItems(Arrays.asList(waterItem, electricItem));
+        invoice.setItems(Collections.emptyList());
 
         when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
         when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
-        when(invoiceRepo.findTotalUnpaidByTenant("USR-001")).thenReturn(BigDecimal.valueOf(150));
-        when(invoiceRepo.findTotalExpensesByTenant("USR-001")).thenReturn(300.0);
-        when(invoiceRepo.findRecentInvoicesByTenant(eq("USR-001"), any(LocalDate.class))).thenReturn(Arrays.asList(invoice));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-001")).thenReturn(BigDecimal.valueOf(1234.0));
+        when(invoiceRepo.findTotalExpensesByTenant("USR-001")).thenReturn(5678.0);
         when(maintenanceRepo.countByRoomRoomNumAndStatus(roomNum, "pending")).thenReturn(2L);
+        when(invoiceRepo.findRecentInvoicesByTenant(eq("USR-001"), any(LocalDate.class)))
+                .thenReturn(List.of(invoice));
 
         RoomDashboardDto result = dashboardService.getRoomDashboard(roomNum);
 
-        assertEquals(roomNum, result.getRoomNum());
-        assertEquals("available", result.getStatus());
-        assertEquals("USR-001", result.getTenantID());
+        assertEquals(BigDecimal.valueOf(1234.0), result.getTotalUnpaid());
+        assertEquals(BigDecimal.valueOf(5678.0), result.getTotalExpenses());
         assertEquals(2, result.getMaintenanceCount());
-        assertEquals(BigDecimal.valueOf(150), result.getTotalUnpaid());
-        assertEquals(BigDecimal.valueOf(300.0), result.getTotalExpenses());
-        assertEquals(1, result.getLast6Months().size());
-        assertEquals(BigDecimal.valueOf(100), result.getLast6Months().get(0).getWater());
-        assertEquals(BigDecimal.valueOf(200), result.getLast6Months().get(0).getElectric());
     }
 
     @Test
-    void getRoomDashboard_roomNotFound_throwsException() {
+    void getRoomDashboard_withThaiItems_success() {
+        String roomNum = "202";
+        Room room = new Room();
+        room.setRoomNum(roomNum);
+        room.setStatus("available");
+
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-TH");
+
+        Contract contract = new Contract();
+        contract.setTenant(tenant);
+        contract.setStatus("active");
+        contract.setStartDate(LocalDate.now().minusDays(2));
+
+        InvoiceItem item1 = new InvoiceItem();
+        item1.setDescription("ค่าน้ำ");
+        item1.setAmount(BigDecimal.valueOf(50));
+
+        InvoiceItem item2 = new InvoiceItem();
+        item2.setDescription("ค่าไฟ");
+        item2.setAmount(BigDecimal.valueOf(150));
+
+        Invoice invoice = new Invoice();
+        invoice.setIssueDate(LocalDate.now());
+        invoice.setItems(List.of(item1, item2));
+
+        when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
+        when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-TH")).thenReturn(BigDecimal.ZERO);
+        when(invoiceRepo.findTotalExpensesByTenant("USR-TH")).thenReturn(0.0);
+        when(maintenanceRepo.countByRoomRoomNumAndStatus(roomNum, "pending")).thenReturn(0L);
+        when(invoiceRepo.findRecentInvoicesByTenant(eq("USR-TH"), any(LocalDate.class)))
+                .thenReturn(List.of(invoice));
+
+        RoomDashboardDto result = dashboardService.getRoomDashboard(roomNum);
+
+        assertEquals(BigDecimal.valueOf(50), result.getLast6Months().get(0).getWater());
+        assertEquals(BigDecimal.valueOf(150), result.getLast6Months().get(0).getElectric());
+    }
+
+    @Test
+    void getRoomDashboard_itemAmountIsNull_treatedAsZero() {
+        String roomNum = "404";
+        Room room = new Room();
+        room.setRoomNum(roomNum);
+        room.setStatus("available");
+
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-NULL-AMT");
+
+        Contract contract = new Contract();
+        contract.setTenant(tenant);
+        contract.setStatus("active");
+        contract.setStartDate(LocalDate.now().minusDays(5));
+
+        InvoiceItem nullAmountItem = new InvoiceItem();
+        nullAmountItem.setDescription("water fee");
+        nullAmountItem.setAmount(null);
+
+        Invoice invoice = new Invoice();
+        invoice.setIssueDate(LocalDate.now());
+        invoice.setItems(List.of(nullAmountItem));
+
+        when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
+        when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-NULL-AMT")).thenReturn(BigDecimal.ZERO);
+        when(invoiceRepo.findTotalExpensesByTenant("USR-NULL-AMT")).thenReturn(0.0);
+        when(maintenanceRepo.countByRoomRoomNumAndStatus(roomNum, "pending")).thenReturn(0L);
+        when(invoiceRepo.findRecentInvoicesByTenant(eq("USR-NULL-AMT"), any(LocalDate.class)))
+                .thenReturn(List.of(invoice));
+
+        RoomDashboardDto result = dashboardService.getRoomDashboard(roomNum);
+
+        assertEquals(BigDecimal.ZERO, result.getLast6Months().get(0).getTotal());
+    }
+
+    @Test
+    void getRoomDashboard_roomNotFound() {
         when(roomRepo.findById("999")).thenReturn(Optional.empty());
         assertThrows(ResourceNotFoundException.class, () -> dashboardService.getRoomDashboard("999"));
     }
 
     @Test
-    void getRoomDashboard_noActiveContract_throwsException() {
+    void getRoomDashboard_noActiveContract() {
         String roomNum = "101";
-        Room room = new Room();
-        room.setRoomNum(roomNum);
-
-        when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
+        when(roomRepo.findById(roomNum)).thenReturn(Optional.of(new Room()));
         when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.empty());
-
         assertThrows(ResourceNotFoundException.class, () -> dashboardService.getRoomDashboard(roomNum));
     }
 
     @Test
-    void getOutstandingByRoomNum_success() {
-        String roomNum = "101";
+    void getOutstandingByRoomNum_success_withPayments() {
+        String roomNum = "201";
 
         Tenant tenant = new Tenant();
         tenant.setTenantId("USR-001");
 
         Contract contract = new Contract();
-        contract.setContractNum("CTR-2025-001");
-        contract.setRoom(new Room());
         contract.setTenant(tenant);
         contract.setStatus("active");
 
-        Invoice invoice = new Invoice();
-        invoice.setInvoiceId("INV-2025-10-001");
-        invoice.setTotalAmount(BigDecimal.valueOf(500));
-        invoice.setDueDate(LocalDate.now().plusDays(10));
-        invoice.setStatus("unpaid");
-        invoice.setPayments(Collections.emptyList());
+        Payment pay = new Payment();
+        pay.setPaymentDate(LocalDate.now());
+
+        Invoice invoicePaid = new Invoice();
+        invoicePaid.setInvoiceId("INV-001");
+        invoicePaid.setStatus("paid");
+        invoicePaid.setTotalAmount(BigDecimal.valueOf(1000));
+        invoicePaid.setPayments(List.of(pay));
+
+        Invoice invoiceUnpaid = new Invoice();
+        invoiceUnpaid.setInvoiceId("INV-002");
+        invoiceUnpaid.setStatus("unpaid");
+        invoiceUnpaid.setTotalAmount(BigDecimal.valueOf(500));
+        invoiceUnpaid.setPayments(Collections.emptyList());
 
         when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
-        when(invoiceRepo.findByTenantTenantId("USR-001")).thenReturn(Arrays.asList(invoice));
-        when(invoiceRepo.findTotalUnpaidByTenant("USR-001")).thenReturn(BigDecimal.valueOf(500));
+        when(invoiceRepo.findByTenantTenantId("USR-001")).thenReturn(List.of(invoicePaid, invoiceUnpaid));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-001")).thenReturn(null); // test null outstanding
 
         RoomOutstandingDto result = dashboardService.getOutstandingByRoomNum(roomNum);
 
         assertEquals(roomNum, result.getRoomNum());
-        assertEquals(BigDecimal.valueOf(500), result.getTotalOutstanding());
-        assertEquals(1, result.getPayments().size());
-        assertEquals("ค้างชำระ", result.getPayments().get(0).getStatus());
+        assertEquals(BigDecimal.ZERO, result.getTotalOutstanding());
+        assertEquals(2, result.getPayments().size());
+        assertTrue(result.getPayments().stream().anyMatch(p -> p.getStatus().equals("ชำระแล้ว")));
+        assertTrue(result.getPayments().stream().anyMatch(p -> p.getStatus().equals("ค้างชำระ")));
+    }
+
+    @Test
+    void getOutstandingByRoomNum_withNullPayments_success() {
+        String roomNum = "303";
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-303");
+
+        Contract contract = new Contract();
+        contract.setTenant(tenant);
+        contract.setStatus("active");
+
+        Invoice invoice = new Invoice();
+        invoice.setInvoiceId("INV-303");
+        invoice.setStatus("unpaid");
+        invoice.setTotalAmount(BigDecimal.valueOf(1000));
+        invoice.setPayments(null);
+
+        when(contractRepo.findByRoomRoomNumAndStatus(roomNum, "active")).thenReturn(Optional.of(contract));
+        when(invoiceRepo.findByTenantTenantId("USR-303")).thenReturn(List.of(invoice));
+        when(invoiceRepo.findTotalUnpaidByTenant("USR-303")).thenReturn(BigDecimal.valueOf(1000));
+
+        RoomOutstandingDto result = dashboardService.getOutstandingByRoomNum(roomNum);
+
+        assertEquals(BigDecimal.valueOf(1000), result.getTotalOutstanding());
+        assertNull(result.getPayments().get(0).getPaidDate());
+    }
+
+    @Test
+    void getOutstandingByRoomNum_noContractFound_throws() {
+        when(contractRepo.findByRoomRoomNumAndStatus("404", "active")).thenReturn(Optional.empty());
+        assertThrows(ResourceNotFoundException.class, () -> dashboardService.getOutstandingByRoomNum("404"));
     }
 
     @Test
     void getMaintenanceLogsByRoom_success() {
-        String roomNum = "101";
+        String roomNum = "301";
         Room room = new Room();
         room.setRoomNum(roomNum);
 
@@ -154,72 +294,133 @@ class DashboardServiceTest {
         MaintenanceLog log2 = new MaintenanceLog();
 
         when(roomRepo.findById(roomNum)).thenReturn(Optional.of(room));
-        when(maintenanceRepo.findByRoomRoomNumOrderByRequestDateDesc(roomNum)).thenReturn(Arrays.asList(log1, log2));
+        when(maintenanceRepo.findByRoomRoomNumOrderByRequestDateDesc(roomNum)).thenReturn(List.of(log1, log2));
 
         List<MaintenanceLog> result = dashboardService.getMaintenanceLogsByRoom(roomNum);
         assertEquals(2, result.size());
     }
 
     @Test
-    void getTenantDetail_success() {
+    void getMaintenanceLogsByRoom_roomNotFound_throws() {
+        when(roomRepo.findById("999")).thenReturn(Optional.empty());
+        assertThrows(ResourceNotFoundException.class, () -> dashboardService.getMaintenanceLogsByRoom("999"));
+    }
+
+    @Test
+    void getTenantDetail_success_multipleContracts() {
         User user = new User();
-        user.setFullName("John Doe");
-        user.setSex("Male");
-        user.setEmail("john@example.com");
-        user.setTel("0812345678");
-        user.setJob("Engineer");
-        user.setWorkplace("CompanyX");
+        user.setFullName("Alice");
+        user.setSex("Female");
+        user.setEmail("alice@mail.com");
+        user.setTel("0999999999");
+        user.setJob("Designer");
+        user.setWorkplace("StudioX");
 
         Tenant tenant = new Tenant();
         tenant.setTenantId("USR-001");
         tenant.setUser(user);
-        tenant.setEmergencyContact("0812345678");
-        tenant.setEmergencyName("Jane Doe");
-        tenant.setEmergencyRelationship("Wife");
 
-        RoomType rt = new RoomType();
-        rt.setPrice(BigDecimal.valueOf(5000));
+        Contract c1 = new Contract();
+        c1.setContractNum("C1");
+        c1.setStatus("expired");
+        c1.setStartDate(LocalDate.now().minusDays(100));
+        c1.setEndDate(LocalDate.now().minusDays(50));
+        c1.setRentAmount(5000);
+        c1.setDeposit(10000);
+        c1.setBillingCycle("monthly");
+        Room room1 = new Room();
+        room1.setRoomNum("101");
+        c1.setRoom(room1);
 
-        Room room = new Room();
-        room.setRoomNum("101");
-        room.setRoomType(rt);
+        Contract c2 = new Contract();
+        c2.setContractNum("C2");
+        c2.setStatus("active");
+        c2.setStartDate(LocalDate.now().minusDays(10));
+        c2.setEndDate(LocalDate.now().plusDays(20));
+        c2.setRentAmount(6000);
+        c2.setDeposit(12000);
+        c2.setBillingCycle("monthly");
+        Room room2 = new Room();
+        room2.setRoomNum("102");
+        c2.setRoom(room2);
 
-        Contract contract = new Contract();
-        contract.setContractNum("CTR-2025-001");
-        contract.setStartDate(LocalDate.now().minusDays(10));
-        contract.setEndDate(LocalDate.now().plusDays(20));
-        contract.setRentAmount(rt.getPrice().doubleValue());
-        contract.setDeposit(rt.getPrice().doubleValue() * 2);
-        contract.setStatus("active");
-        contract.setRoom(room);
-        contract.setBillingCycle("monthly");
-
-        tenant.setContract(Arrays.asList(contract));
+        tenant.setContract(List.of(c1, c2));
 
         when(tenantRepo.findById("USR-001")).thenReturn(Optional.of(tenant));
 
         TenantsManagement result = dashboardService.getTenantDetail("USR-001");
 
         assertEquals("USR-001", result.getTenantId());
-        assertEquals("John Doe", result.getName());
+        assertEquals("Alice", result.getName());
         assertEquals("active", result.getCurrentStatus());
+        assertEquals(2, result.getContracts().size());
+        assertEquals("102", result.getContracts().get(1).getRoomNumber());
+    }
+
+    @Test
+    void getTenantDetail_contractWithNullRoom_setsRoomNumberNull() {
+        User user = new User();
+        user.setFullName("Charlie");
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-NOROOM");
+        tenant.setUser(user);
+
+        Contract contract = new Contract();
+        contract.setContractNum("C0");
+        contract.setStatus("inactive");
+        contract.setStartDate(LocalDate.now().minusDays(30));
+        contract.setEndDate(LocalDate.now().minusDays(10));
+        contract.setRentAmount(4000);
+        contract.setDeposit(8000);
+        contract.setBillingCycle("monthly");
+        contract.setRoom(null);
+
+        tenant.setContract(List.of(contract));
+
+        when(tenantRepo.findById("USR-NOROOM")).thenReturn(Optional.of(tenant));
+
+        TenantsManagement result = dashboardService.getTenantDetail("USR-NOROOM");
+
         assertEquals(1, result.getContracts().size());
+        assertNull(result.getContracts().get(0).getRoomNumber()); // ✅ null branch
+    }
+
+
+    @Test
+    void getTenantDetail_noContract_setsUnknownStatus() {
+        User user = new User();
+        user.setFullName("Bob");
+        Tenant tenant = new Tenant();
+        tenant.setTenantId("USR-NULL");
+        tenant.setUser(user);
+        tenant.setContract(Collections.emptyList());
+
+        when(tenantRepo.findById("USR-NULL")).thenReturn(Optional.of(tenant));
+
+        TenantsManagement result = dashboardService.getTenantDetail("USR-NULL");
+
+        assertEquals("unknown", result.getCurrentStatus());
+        assertEquals("Bob", result.getName());
+    }
+
+
+    @Test
+    void getTenantDetail_tenantNotFound_throws() {
+        when(tenantRepo.findById("404")).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> dashboardService.getTenantDetail("404"));
     }
 
     @Test
     void getAllTenants_success() {
-        Tenant tenant1 = new Tenant();
-        tenant1.setTenantId("USR-001");
-        Tenant tenant2 = new Tenant();
-        tenant2.setTenantId("USR-002");
+        Tenant t1 = new Tenant();
+        t1.setTenantId("USR-001");
+        Tenant t2 = new Tenant();
+        t2.setTenantId("USR-002");
 
-        when(tenantRepo.findAll()).thenReturn(Arrays.asList(tenant1, tenant2));
-        when(tenantRepo.findById("USR-001")).thenReturn(Optional.of(tenant1));
-        when(tenantRepo.findById("USR-002")).thenReturn(Optional.of(tenant2));
+        when(tenantRepo.findAll()).thenReturn(List.of(t1, t2));
 
         DashboardService spyService = spy(dashboardService);
-        doReturn(mock(TenantsManagement.class)).when(spyService).getTenantDetail("USR-001");
-        doReturn(mock(TenantsManagement.class)).when(spyService).getTenantDetail("USR-002");
+        doReturn(new TenantsManagement()).when(spyService).getTenantDetail(anyString());
 
         List<TenantsManagement> result = spyService.getAllTenants();
         assertEquals(2, result.size());
